# world-cup

./: .gitignore  AVL_tree.cpp  AVL_tree.h  CMakeLists.txt  Player.cpp  Player.h  Team.cpp  Team.h  a.out  helper.cpp  main.cpp  player.cpp  player.h  team.cpp  team.h  worldcup23a1.cpp  worldcup23a1.h
